@@ -1,4 +1,0 @@
-char *ttyname(int fd)
-{
-  return "CON";
-}
