@@ -1,3 +1,8 @@
+2007-09-19  Kai Tietz  <kai.tietz@onevision.com>
+
+	* Makefile: removed termios and TERMIOS_OBJS.
+	* termios/: Removed.
+
 2007-09-11  Kai Tietz  <kai.tietz@onevision.com>
 
 	* math/cephes_emath.c: (__emdnorm): Work around
